packages/kit/test/apps/basics/src/routes/errors/stack-trace/+page.svelte
<script>
	import bad from './_bad.js';
</script>

<h1>{bad}</h1>
